--- a/front/package.json
+++ b/front/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.4.1",
     "firebase": "^7.8.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "materialize-css": "^1.0.0-rc.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
