--- a/front/package.json
+++ b/front/package.json
@@ -26,8 +26,9 @@
     "firebase": "^7.8.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
-    "materialize-css": "^1.0.0-rc.2",
+    "material-icons": "^0.3.1",
     "popper.js": "^1.16.1",
+    "propellerkit": "^1.3.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
