--- a/front/package.json
+++ b/front/package.json
@@ -17,11 +17,13 @@
     "@angular/core": "^9.0.4",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "^9.0.4",
+    "@angular/localize": "^9.0.5",
     "@angular/platform-browser": "^9.0.4",
     "@angular/platform-browser-dynamic": "^9.0.4",
     "@angular/router": "^9.0.4",
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.4.1",
     "firebase": "^7.9.3",
